* Improved shortcut bar. * Fixed layout bug. * Some minor changes.

--- a/tinyerp/static/css/listview.css
+++ b/tinyerp/static/css/listview.css
@@ -1,7 +1,6 @@
 .grid {
     border: none;
 	border-top: 1px solid #999;
-	border-bottom: 1px solid #999;
 }
 
 .grid .header td,
@@ -14,7 +13,6 @@
 	height:22px;
 	text-align: left;
 	background:url(/static/images/gradientlinebg.gif);
-	border-top: 1px solid #999;
 	border-bottom: 1px solid #999;
 	font-weight: bold;
 }
@@ -32,12 +30,13 @@
 }
 
 .grid .pager {
-	white-space: nowrap;
+	white-space: nowrap;	
 }
 
 .grid .pager table {
 	height:22px;
 	background: #f3f3f3;
+	border-bottom: 1px solid #999;	
 }
 
 .grid .pager table td {
